fixes the extra left and right borders overlapping border radius. Fixes #271

--- a/excelsior/scss/excelsior/components/_off-canvas.scss
+++ b/excelsior/scss/excelsior/components/_off-canvas.scss
@@ -135,6 +135,14 @@ body.off-canvas {
                     @include breakpoint($off-canvas-medium-width, $no-query: true) {
                         border-right: 1px solid #000;
                         border-left: 1px solid #666;
+
+                        &:first-child {
+                            border-left: none;
+                        }
+
+                        &:last-child {
+                            border-right: none;
+                        }
                     }
 
                     &:first {
